[package]
name = "blackjack-contract"
version = "0.1.0"
authors = ["Rebels Blocks"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.17.2", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations
overflow-checks = true

[profile.dev]
# Enable overflow checks in development
overflow-checks = true
